Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/repeatingAnnotations/BaseAnnoAsContainerAnno.out
BaseAnnoAsContainerAnno.java:13:11: compiler.err.cyclic.annotation.element: Foo
1 error
